# SolanaVanityAddr

./: .gitignore  Cargo.toml  README.md  solana_vanity_address
src/: main.rs
