[patch.crates-io]
crunchy = { path = "vendor/crunchy" }

[package]
name = "solana_vanity_address"
version = "0.1.2"
edition = "2024"

[dependencies]
solana-sdk = "1.16.5"
bs58 = "0.4.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17.0"
rayon = "1.7.0"
chrono = "0.4.26"
clap = { version = "4.3.0", features = ["derive"] }
